[package]
name = "rfclib"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Rust library for querying IETF RFCs"
documentation = "https://docs.rs/rfclib"
readme = "README.md"
homepage = "https://github.com/ewpratten/rfclib"
repository = "https://github.com/ewpratten/rfclib"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
